# beany-fastapi-async

./: .env.example  .gitignore  Dockerfile  README.md  database_sql.sql  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
common/: __init__.py  common.py  config.py  deps.py  logger.py
dao/: __init__.py  base_dao.py  captcha_dao.py  user_dao.py
model/: captcha.py  user.py
router/: __init__.py  captcha.py  user.py
service/: captcha_service.py  user_service.py
store/: postgres.py
templates/: captcha_email.html
util/: utils.py
