[project]
name = "beany-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    #    "email-validator>=2.3.0",
    "emails>=0.6",
    "fastapi>=0.121.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
    "pydantic[email]>=2.12.4",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.30.0",
    "jinja2>=3.1.6",
    "aiosmtplib>=5.0.0",
]
